code block for demo added

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <title>Dubalu</title>
   </head>
   <body>
+    <div style="background-color: #272822; padding: 10px; border-radius: 5px">
+      <pre><code>
+        <span style="color: #75715e;">&lt;!-- Import the library with script tag --&gt;</span><br>
+        <span style="color: #f92672;">&lt;script</span> <span style="color: #a6e22e;">src=</span><span style="color: #e6db74;">"main.js"</span><span style="color: #f92672;">&gt;</span><span style="color: #f92672;">&lt;/script&gt;</span>
+      </code></pre>
+    </div>
+
     <div id="root" />
     <script>
       checkoutButton({
