code block for demo added 2

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,50 @@
   <body>
     <div style="background-color: #272822; padding: 10px; border-radius: 5px">
       <pre><code>
+        <span style="color: #f92672;">&lt;head&gt;</span><br>
         <span style="color: #75715e;">&lt;!-- Import the library with script tag --&gt;</span><br>
-        <span style="color: #f92672;">&lt;script</span> <span style="color: #a6e22e;">src=</span><span style="color: #e6db74;">"main.js"</span><span style="color: #f92672;">&gt;</span><span style="color: #f92672;">&lt;/script&gt;</span>
+        &nbsp;&nbsp;<span style="color: #f92672;">&lt;script</span> <span style="color: #a6e22e;">src=</span><span style="color: #e6db74;">"main.js"</span><span style="color: #f92672;">&gt;</span><span style="color: #f92672;">&lt;/script&gt;</span><br>
+        <span style="color: #f92672;">&lt;/head&gt;</span>
       </code></pre>
+    </div>
+
+    <div
+      style="
+        background-color: #272822;
+        padding: 10px;
+        border-radius: 5px;
+        margin-top: 10px;
+      "
+    >
+      <pre><code>
+        <span style="color: #75715e;">&lt;!-- Body section --&gt;</span><br>
+        <span style="color: #f92672;">&lt;body&gt;</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #75715e;">&lt;!-- Aquí va el contenido --&gt;</span><br>
+        &nbsp;&nbsp;<span style="color: #f92672;">&lt;div</span> <span style="color: #a6e22e;">id=</span><span style="color: #e6db74;">"root"</span><span style="color: #f92672;">&gt;</span><br>
+        &nbsp;&nbsp;<span style="color: #f92672;">&lt;/div&gt;</span><br>
+        <span style="color: #f92672;">&lt;/body&gt;</span>
+      </code></pre>
+    </div>
+
+    <div
+      style="
+        background-color: #272822;
+        padding: 10px;
+        border-radius: 5px;
+        margin-top: 10px;
+      "
+    >
+      <pre><code>
+    <span style="color: #f92672;">&lt;body&gt;</span><br>
+    <span style="color: #75715e;">&lt;!-- Your body content --&gt;</span><br>
+    &nbsp;&nbsp;<span style="color: #196fca;">checkoutButton</span><span style="color: #75715e;">({</span><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #a6e22e;">containerID:</span> <span style="color: #e6db74;">'root'</span>, <span style="color: #75715e;">&lt;!-- ID del contenedor donde se cargará la biblioteca --&gt;</span><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #a6e22e;">shopUrl:</span> <span style="color: #e6db74;">'https://rocioshop.com/'</span>, <span style="color: #75715e;">&lt;!-- URL de la tienda --&gt;</span><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #a6e22e;">mashupID:</span> <span style="color: #e6db74;">'~2RtpU94f9CnoO5a'</span>, <span style="color: #75715e;">&lt;!-- ID del mashup específico --&gt;</span><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #a6e22e;">productID:</span> <span style="color: #e6db74;">'~BCGzWCEVJ2cq'</span>, <span style="color: #75715e;">&lt;!-- ID del producto --&gt;</span><br>
+    &nbsp;&nbsp;<span style="color: #75715e;">});</span><br>
+    <span style="color: #f92672;">&lt;/body&gt;</span>
+  </code></pre>
     </div>
 
     <div id="root" />
