Checkout Button: Added product image (example) and product Id was changed (2)

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
           &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">containerID:</span> <span style="color: #e6db74;">'root'</span>, <span class="text-grey-light">&lt;!-- ID container where library loads --&gt;</span>
           &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">shopUrl:</span> <span style="color: #e6db74;">'https://rocioshop.com/'</span>, <span class="text-grey-light">&lt;!-- Dubalu Store URL --&gt;</span>
           &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">mashupID:</span> <span style="color: #e6db74;">'~2RtpU94f9CnoO5a'</span>, <span class="text-grey-light">&lt;!-- Mashup ID --&gt;</span>
-          &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">productID:</span> <span style="color: #e6db74;">'~2xM6pbxWARJSW'</span>, <span class="text-grey-light">&lt;!-- Product ID --&gt;</span>
+          &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">productID:</span> <span style="color: #e6db74;">'~2m7JYMEyHDgtn'</span>, <span class="text-grey-light">&lt;!-- Product ID --&gt;</span>
           &nbsp;&nbsp;<span class="text-grey-light">});</span>
           <span class="text-red-light">&lt;/body&gt;</span>
         </code></pre>
@@ -76,7 +76,7 @@
         containerID: 'root',
         shopUrl: 'https://rocioshop.com/',
         mashupID: '~2RtpU94f9CnoO5a',
-        productID: '~2xM6pbxWARJSW',
+        productID: '~2m7JYMEyHDgtn',
       });
     </script>
   </body>
