Checkout Button: Added svg favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#0099ff">
-    <meta name="og:title" content="Tailwind CSS Animations Plugin: Community-Powered Animation Magic">
-    <meta name="og:description" content="Tailwind plugin to add easily animations to your website">
-    <meta name="og:image" content="favicon.svg">
+    <meta name="og:title" content="Checkout functionality for Dubalu's ecosystem">
+    <meta name="og:description" content="This is a Javascript library with the minimum required functionality for a checkout in Dubalu's ecosystem Resources">
+    <meta name="og:image" content="../favicon.svg">
     <meta name="twitter:card" content="summary_large_image">
     <title>Checkout functionality for Dubalu's ecosystem</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link href="../src/styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
