Checkout Button: Added svg favicon (2)

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#0099ff">
     <meta name="og:title" content="Checkout functionality for Dubalu's ecosystem">
     <meta name="og:description" content="This is a Javascript library with the minimum required functionality for a checkout in Dubalu's ecosystem Resources">
-    <meta name="og:image" content="../favicon.svg">
+    <meta name="og:image" content="favicon.svg">
     <meta name="twitter:card" content="summary_large_image">
     <title>Checkout functionality for Dubalu's ecosystem</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
