upr to script was updated

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <pre><code>
           <span class="text-red-light">&lt;head&gt;</span>
           <span class="text-grey-light">&lt;!-- Import the library with script tag --&gt;</span>
-          <span class="text-red-light">&lt;script</span> <span class="text-yellow-light">src=</span><span style="color: #e6db74;">"main.js"</span><span class="text-red-light">&gt;</span><span class="text-red-light">&lt;/script&gt;</span>
+          <span class="text-red-light">&lt;script</span> <span class="text-yellow-light">src=</span><span style="color: #e6db74;">"https://dubalu-development-team.github.io/checkoutbutton/main.js"</span><span class="text-red-light">&gt;</span><span class="text-red-light">&lt;/script&gt;</span>
           <span class="text-red-light">&lt;/head&gt;</span>
         </code></pre>
       </div>
