flag showImage added to library config 2

--- a/public/index.html
+++ b/public/index.html
@@ -62,13 +62,13 @@
           &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">shopUrl:</span> <span style="color: #e6db74;">'https://rocioshop.com/'</span>, <span class="text-grey-light">&lt;!-- Dubalu Store URL --&gt;</span>
           &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">mashupID:</span> <span style="color: #e6db74;">'~2RtpU94f9CnoO5a'</span>, <span class="text-grey-light">&lt;!-- Mashup ID --&gt;</span>
           &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">productID:</span> <span style="color: #e6db74;">'~2m7JYMEyHDgtn'</span>, <span class="text-grey-light">&lt;!-- Product ID --&gt;</span>
+          &nbsp;&nbsp;&nbsp;&nbsp;<span class="text-yellow-light">showImage:</span> <span style="color: #e6db74;">true</span>, <span class="text-grey-light">&lt;!-- flag to show product image --&gt;</span>
           &nbsp;&nbsp;<span class="text-grey-light">});</span>
           <span class="text-red-light">&lt;/body&gt;</span>
         </code></pre>
       </div>
 
-      <div id="root">
-      </div>
+      <div id="root"></div>
     </main>
     <script>
       checkoutButton({
@@ -76,6 +76,7 @@
         shopUrl: 'https://rocioshop.com/',
         mashupID: '~2RtpU94f9CnoO5a',
         productID: '~2m7JYMEyHDgtn',
+        showImage: true,
       });
     </script>
   </body>
